# codex-halo

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
demo/: hero.html
docs/: ARCHITECTURE.md  INSTALLATION.md  PRIVACY.md  RELEASE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  RELEASE_README.txt  TROUBLESHOOTING.md
hooks/macos/: codex-halo-hook.sh
hooks/windows/: codex-halo-hook.ps1
scripts/macos/: install.command  manage-hooks.js  test-state.sh  uninstall.command  verify.command
scripts/release/: package-macos.sh  package-windows.ps1
scripts/windows/: Install-Codex-Halo.ps1  Manage-Codex-HaloHooks.ps1  Test-State.ps1  Uninstall-Codex-Halo.ps1  Verify-Codex-Halo.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  settings.rs  state.rs  tray.rs  watcher.rs
src-tauri/src/platform/: mod.rs
src/components/: HaloOverlay.tsx
src/effects/: FullEdgeEffect.tsx  MinimalBarEffect.tsx  effectStyles.ts
src/state/: useStateManager.ts
src/themes/: definitions.ts
(+5 files in other folders)
